<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
                                      xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/telegram_information">

        <EditTextPreference
                app:key="telegram_id"
                app:title="@string/telegram_id"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="telegram_token"
                app:title="@string/telegram_token"
                app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/telegram_proxy">

        <EditTextPreference
                app:key="proxy_ip"
                app:title="@string/proxy_ip"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="proxy_port"
                app:title="@string/proxy_port"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
